{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 18,
  "lineage": "bc39fbfb-0d15-9a96-d297-2b88a6f196db",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:vpc/vpc-088e66f632d6853d7",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e9ac2ed9e6ab039c",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0daeae4521762914f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-088e66f632d6853d7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-039541691e2d3621b",
            "owner_id": "836906079004",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "schankov",
              "env": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:security-group/sg-0e7eb921176c63244",
            "description": "allow all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7eb921176c63244",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-ec2",
            "name_prefix": "",
            "owner_id": "836906079004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "schankov"
            },
            "tags_all": {
              "Name": "schankov"
            },
            "timeouts": null,
            "vpc_id": "vpc-088e66f632d6853d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:security-group/sg-01813b1f4648c3369",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01813b1f4648c3369",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-all-lb",
            "name_prefix": "",
            "owner_id": "836906079004",
            "revoke_rules_on_delete": false,
            "tags": {
              "createdBy": "schankov",
              "env": "dev"
            },
            "tags_all": {
              "createdBy": "schankov",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-088e66f632d6853d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:route-table/rtb-0465d9fb6946174ae",
            "id": "rtb-0465d9fb6946174ae",
            "owner_id": "836906079004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test_ecs_provisioning-public",
              "createdBy": "schankov",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public",
              "createdBy": "schankov",
              "env": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-088e66f632d6853d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5ee4e3d02fcba3a",
            "route_table_id": "rtb-0465d9fb6946174ae",
            "subnet_id": "subnet-09e96b57ce5e9fdff"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089551a569ee54e9d",
            "route_table_id": "rtb-0465d9fb6946174ae",
            "subnet_id": "subnet-0ef37e2afbdad97f3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc37f490b839ebe6",
            "route_table_id": "rtb-0465d9fb6946174ae",
            "subnet_id": "subnet-085b45e2557479799"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:subnet/subnet-09e96b57ce5e9fdff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e96b57ce5e9fdff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "836906079004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-eu-central-1a",
              "createdBy": "schankov",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-eu-central-1a",
              "createdBy": "schankov",
              "env": "dev"
            },
            "vpc_id": "vpc-088e66f632d6853d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:subnet/subnet-0ef37e2afbdad97f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef37e2afbdad97f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "836906079004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-eu-central-1b",
              "createdBy": "schankov",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-eu-central-1b",
              "createdBy": "schankov",
              "env": "dev"
            },
            "vpc_id": "vpc-088e66f632d6853d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:subnet/subnet-085b45e2557479799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085b45e2557479799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "836906079004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test_ecs_provisioning-public-eu-central-1c",
              "createdBy": "schankov",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning-public-eu-central-1c",
              "createdBy": "schankov",
              "env": "dev"
            },
            "vpc_id": "vpc-088e66f632d6853d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:836906079004:vpc/vpc-088e66f632d6853d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-038f09b6a786fde51",
            "default_route_table_id": "rtb-039541691e2d3621b",
            "default_security_group_id": "sg-00dbfe1e0c9007959",
            "dhcp_options_id": "dopt-0daeae4521762914f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-088e66f632d6853d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039541691e2d3621b",
            "owner_id": "836906079004",
            "tags": {
              "Name": "test_ecs_provisioning",
              "createdBy": "schankov",
              "env": "dev"
            },
            "tags_all": {
              "Name": "test_ecs_provisioning",
              "createdBy": "schankov",
              "env": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}